[gd_scene load_steps=4 format=3 uid="uid://b2xxhep8oyipk"]

[ext_resource type="Theme" uid="uid://em12la0rqibq" path="res://data/PVZ_theme.tres" id="1_xr4kl"]
[ext_resource type="Script" uid="uid://ey22hrnnxts2" path="res://scripts/ui/coin/coin_bank.gd" id="2_q46qq"]
[ext_resource type="Texture2D" uid="uid://cw2840cylma5o" path="res://assets/image/ui/coinbank.png" id="3_hsc68"]

[node name="CoinBankLabel" type="Control"]
z_index = 3200
z_as_relative = false
layout_mode = 3
anchors_preset = 0
theme = ExtResource("1_xr4kl")
script = ExtResource("2_q46qq")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
offset_right = 128.0
offset_bottom = 40.0
texture = ExtResource("3_hsc68")

[node name="LabelCoinValue" type="Label" parent="TextureRect"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -92.0
offset_top = -8.0
offset_right = -5.0
offset_bottom = 14.0
grow_horizontal = 0
grow_vertical = 2
theme_override_colors/font_outline_color = Color(0, 1, 0, 1)
theme_override_constants/shadow_offset_x = -1
theme_override_constants/shadow_offset_y = -1
theme_override_constants/outline_size = 1
theme_override_constants/shadow_outline_size = 2
theme_override_font_sizes/font_size = 19
text = "$10086"
horizontal_alignment = 2
vertical_alignment = 1

[node name="TimerAutoHide" type="Timer" parent="."]
wait_time = 10.0
one_shot = true

[node name="Marker2DCoinTarget" type="Marker2D" parent="."]
position = Vector2(23, 23)

[connection signal="timeout" from="TimerAutoHide" to="." method="_on_timer_auto_hide_timeout"]
